Minor build deploy refactoring